# VideoQualityAssessment

./: .gitignore  A6.cpp  A6.h  CMakeLists.txt  LICENSE  README.md  VideoQualityAssessment.VC.VC.opendb  demo.cpp  filename.cpp  filename.h  hole_filling.cpp  hole_filling.h  kooper.cpp  kooper.h  main.cpp  sprite.cpp  sprite.h  utils.cpp  utils.h
